Modified naming conventions + Updated package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mgbutton",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -34,5 +34,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maecchiato/mgbutton.git"
+  },
+  "keywords": [
+    "button"
+  ],
+  "author": "Mae Dagum",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/maecchiato/mgbutton/issues"
+  },
+  "homepage": "https://github.com/maecchiato/mgbutton#readme"
 }
